# Rework

./: .replit  DEBUGGING_GUIDELINES.md  PREMIUM_REBUILD.md  PREMIUM_SYSTEM_REFACTOR.md  STARTUP_GUIDE.md  bot.py  canvas.py  check_environment.py  check_premium_feature.py  cleanup_dev_scripts.py  command_analyzer.py  command_audit_plan.md  commands.py  csv_debug_output.txt  database.py  deploy_premium_system.py  discord_bot.toml  ensure_premium_compatibility.py  extract_zip.py  find_and_replace_error_method.py  forms.py  generate_assets.py  implement_adaptive_csv.py  initialize_premium_db.py  install_pycord.py  launch.sh  main.py  maintenance.py  models_sql.py  path_results.txt  premium_compatibility.py  premium_config.py  premium_dashboard.py  premium_decorators.py  premium_examples.py  premium_feature_access.py  premium_migration.py  premium_mongodb_models.py  premium_trace.py  premium_trace_rewrite.py  (+29 more)
backup_20250513_000256/: PREMIUM_SYSTEM.md  README.md  README_COROUTINE_FIXES.md  bot.py  cleanup_dev_scripts.py  command_analyzer.py  config.py  deploy.sh  find_and_replace_error_method.py  generate_assets.py  implement_adaptive_csv.py  index.html  keep_alive.py  models_sql.py  mongodb_access_report.txt  premium_dashboard.json  premium_dashboard.py  premium_decorators.py  premium_examples.py  premium_mongodb_models.py  premium_trace.py  premium_trace_rewrite.py  pycord_adapter.py  pyproject.toml  quick_path_check.py  reduce_asyncssh_logs.py  reinstall_pycord.py  reset_database.py  routes.py  run_bot.py  run_button.py  run_discord_on_replit.py  run_historical_parse.py  (+6 more)
(+88 files in other folders)
