[project]
name = "tower-of-temptation-discord-bot"
version = "0.1.0"
description = "Discord bot with MongoDB integration for Tower of Temptation PvP Statistics"
requires-python = ">=3.11"
dependencies = [
    "py-cord>=2.4.1",
    "motor>=3.3.2",
    "pymongo[srv]>=4.6.1",
    "python-dotenv>=1.1.0",
    "aiohttp>=3.11.0",
    "asyncio>=3.4.3",
    "asyncssh>=2.14.2",
    "aiofiles>=24.1.0",
    "paramiko>=3.5.1",
    "pillow>=10.2.0",
    "psutil>=5.9.0",
    "pydantic>=2.11.0",
    "pytz>=2024.1",
]
